templates/mvf_template.yaml
---
# Source: mvf/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mvf
  labels:
    
    app.kubernetes.io/name: mvf
    helm.sh/chart: mvf-1.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http-core
      port: 7000
      targetPort: core-api
      protocol: TCP
    - name: http-signatory
      port: 7001
      targetPort: signatory-api
      protocol: TCP
    - name: http-custodian
      port: 7002
      targetPort: custodian-api
      protocol: TCP
    - name: http-auditor
      port: 7003
      targetPort: auditor-api
      protocol: TCP
    - name: http-essif
      port: 7004
      targetPort: essif-api
      protocol: TCP
    - name: http-oidc
      port: 7010
      targetPort: oidc-api
      protocol: TCP
  selector:
    app.kubernetes.io/name: mvf
    app.kubernetes.io/instance: release-name
---
# Source: mvf/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: release-name-mvf
  labels:
    
    app.kubernetes.io/name: mvf
    helm.sh/chart: mvf-1.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mvf
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        
        app.kubernetes.io/name: mvf
        helm.sh/chart: mvf-1.1.2
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.1.1"
        app.kubernetes.io/managed-by: Helm
    spec: 
      serviceAccountName: default
      containers:
        - name: mvf
          image: "wistefan/mvf:latest"
          imagePullPolicy: IfNotPresent
          args:
            - serve
            - -b
            - 0.0.0.0
          ports:
            - containerPort: 7000
              name: core-api
            - containerPort: 7001
              name: signatory-api
            - containerPort: 7002
              name: custodian-api
            - containerPort: 7003
              name: auditor-api
            - containerPort: 7004
              name: essif-api
            - containerPort: 7010
              name: oidc-api
          resources:
            null
          ## workaround for missing db support
          volumeMounts:
            - mountPath: /app/data
              name: data-volume
      volumes:
      - name: data-volume
        emptyDir:
          sizeLimit: 500Mi
---
# Source: mvf/templates/route-signatory.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mvf-signatory
spec:
  port:
    targetPort: 7001
  tls:
    termination: edge
  to:
    kind: Service
    name: mvf
